Bug 101166 - function RATE: argument PayType is not treated as boolean
Summary: function RATE: argument PayType is not treated as boolean
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Winfried Donkers
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-28 07:21 UTC by Winfried Donkers
Modified: 2016-09-02 05:34 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Winfried Donkers 2016-07-28 07:21:28 UTC
=RATE(3;-10;900;0;1;0) and RATE(3;-10;900;0;2;0) do not return the same result, whereas Excel does (-89%).
Comment 1 Eike Rathke 2016-07-29 20:10:05 UTC
ODFF correction submitted to the ODF-TC
https://lists.oasis-open.org/archives/office-comment/201607/msg00010.html
Comment 2 Commit Notification 2016-07-29 20:10:41 UTC
Winfried Donkers committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1ca11b55aecb18f9dcca1e9678910dc2e7593623

tdf#101166 treat argument PayType for Calc function RATE as boolean.

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.