tdf#101166 treat argument PayType for Calc function RATE as boolean.

Excel and Gnumeric treat this argument as boolean.
Financially, payment at beginning or at end of period are the only
existing options, i.e. there no other feasible options.

Change-Id: I7ba9fcdac69b9b0756cdf48abde001a44c8b4c88